# avstack-studies

./: .gitignore  .gitmodules  Dockerfile  LICENSE.md  README.md  full_install.sh  pyproject.toml  run_docker.sh  run_setup.sh
1-transfer-testing/: make-results-table.ipynb  run-transfer-test.ipynb
1-transfer-testing/metrics/box-tracker/tracking/: all_objects_detailed.csv
2-collaborative-sensing/: make-results-table-2.ipynb  run-collaborative-test.ipynb
3-collaborative-sensing/: make-results-table-3.ipynb
3-collaborative-sensing/metrics/box-tracker/tracking/: all_objects_detailed.csv
install/: environment_1.yml  install_environment_1.sh  install_environment_2.sh
